# practic2

./: .gitignore  1.py  GitHub.py  datataime.py  datatime2.py  fun.py  pyproject.toml  valuta.py
src/: 2.py  GitHub.py  fun.py
tests/: test_.py
