[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Андрей Васильев",email = "lr1975@yandex.ru"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''(
  /(
    \.git
  )/
)
'''

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[dependency-groups]
lint = [
    "black (<27.0.0,>=26.3.1)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)"
]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)"
]
